--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <title>Two Times</title>
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link href='http://fonts.googleapis.com/css?family=Play' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/style.css">
       <script src="http://code.jquery.com/jquery.min.js"></script>
@@ -19,7 +20,8 @@
         <!-- <h2>bla bla bla</h2> -->
       </div>
       <div id='screen'>
-        <canvas height='60px' id='display' width='300px'></canvas>
+        <div id='current-bank' class='titles'>Current Bank: <span></span></div>
+        <div id='description' class='titles'>Description: <span></span></div>
       </div>
       <div id='left'>
         <div id='transport'>
