--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div id='container'>
       <div id='logo'>
-        <h1>JS TR-404<sup><span>®</span></sup></h1>
+        <h1> JS-404<sup><span>®</span></sup></h1>
         <!-- <h2>bla bla bla</h2> -->
       </div>
       <div id='screen'>
@@ -26,11 +26,11 @@
       <div id='left'>
         <div id='transport'>
           <div id='banks'>
-            <button id='808'>808</button>
-            <button id='house'>House</button>
-            <button id='dancehall'>Dancehall</button>
-            <button id='hip-hop'>Hip-Hop</button>
-            <button id='chill'>Chill</button>
+            <button id='808'>1</button>
+            <button id='house'>2</button>
+            <button id='dancehall'>3</button>
+            <button id='hip-hop'>4</button>
+            <button id='chill'>5</button>
             <button id='hidden'></button>
           </div>
           <div id='track'>
