add select bank, keydown event

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
       <div id='left'>
         <div id='transport'>
           <div id='banks'>
-            <button id='808'>1</button>
-            <button id='house'>2</button>
-            <button id='dancehall'>3</button>
-            <button id='hip-hop'>4</button>
-            <button id='chill'>5</button>
-            <button id='hidden'></button>
+            <button class='bank selected' id='808' data-id='1'>1</button>
+            <button class='bank' id='house' data-id='2'>2</button>
+            <button class='bank' id='dancehall' data-id='3'>3</button>
+            <button class='bank' id='hip-hop' data-id='4'>4</button>
+            <button class='bank' id='chill' data-id='5'>5</button>
+            <button class='bank' id='hidden' data-id='6'></button>
           </div>
           <div id='track'>
             <button id='record'><img src="images/record.png"></button>
