--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <div id='screen'>
         <div id='current-bank' class='titles'>Current Bank: <span></span></div>
         <div id='description' class='titles'>Description: <span></span></div>
+        <div id="sample" class="titles">Sample: <span></span></div>
       </div>
       <div id='left'>
         <div id='transport'>
@@ -30,7 +31,7 @@
             <button class='bank' id='house' data-id='2'>2</button>
             <button class='bank' id='dancehall' data-id='3'>3</button>
             <button class='bank' id='hip-hop' data-id='4'>4</button>
-            <button class='bank' id='chill' data-id='5'>5</button>
+            <button class='bank' id='soul' data-id='5'>5</button>
             <button class='bank' id='hidden' data-id='6'></button>
           </div>
           <div id='track'>
@@ -42,25 +43,25 @@
         </div>
       </div>
       <div id='pads'>
-        <button class='pad' data-id='52'>4</button>
-        <button class='pad' data-id='53'>5</button>
-        <button class='pad' data-id='54'>6</button>
         <button class='pad' data-id='55'>7</button>
-        <button class='pad' data-id='82'>r</button>
-        <button class='pad' data-id='84'>t</button>
+        <button class='pad' data-id='56'>8</button>
+        <button class='pad' data-id='57'>9</button>
+        <button class='pad' data-id='48'>0</button>
         <button class='pad' data-id='89'>y</button>
         <button class='pad' data-id='85'>u</button>
-        <button class='pad' data-id='68'>d</button>
-        <button class='pad' data-id='70'>f</button>
-        <button class='pad' data-id='71'>g</button>
+        <button class='pad' data-id='73'>i</button>
+        <button class='pad' data-id='79'>o</button>
         <button class='pad' data-id='72'>h</button>
-        <button class='pad' data-id='67'>c</button>
-        <button class='pad' data-id='86'>v</button>
-        <button class='pad' data-id='66'>b</button>
+        <button class='pad' data-id='74'>j</button>
+        <button class='pad' data-id='75'>k</button>
+        <button class='pad' data-id='76'>l</button>
         <button class='pad' data-id='78'>n</button>
+        <button class='pad' data-id='77'>m</button>
+        <button class='pad' data-id='188'>,</button>
+        <button class='pad' data-id='190'>.</button>
       </div>
       <div class="about">
-        <a href="mailto:contact@bobbysmith.codes?Subject=Gimme%20Dat%20Boom" target="_top">contact</a>
+        <a href="mailto:contact@bobbysmith.codes?Subject=Yo" target="_top">contact</a>
         <a href="http://www.twitter.com/yungwelchsgrape" target="_blank">@yungwelchsgrape</a>
       </div>
     </div>
