fill sound banks

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
       <div id='left'>
         <div id='transport'>
           <div id='banks'>
+
+<!-- <marquee behavior="scroll" direction="left">Your continuous scroll text goes here</marquee> -->
+
+
+
             <button class='bank selected' id='808' data-id='1'>1</button>
             <button class='bank' id='house' data-id='2'>2</button>
             <button class='bank' id='dancehall' data-id='3'>3</button>
@@ -55,13 +60,13 @@
         <button class='pad' data-id='74'>j</button>
         <button class='pad' data-id='75'>k</button>
         <button class='pad' data-id='76'>l</button>
+        <button class='pad' data-id='66'>b</button>
         <button class='pad' data-id='78'>n</button>
         <button class='pad' data-id='77'>m</button>
         <button class='pad' data-id='188'>,</button>
-        <button class='pad' data-id='190'>.</button>
       </div>
       <div class="about">
-        <a href="mailto:contact@bobbysmith.codes?Subject=Yo" target="_top">contact</a>
+        <a href="mailto:contact@bobbysmith.codes?Subject=Yo" target="_top">email</a>
         <a href="http://www.twitter.com/yungwelchsgrape" target="_blank">@yungwelchsgrape</a>
       </div>
     </div>
