--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" manifest="local.appcache">
   <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <title>Two Times</title>
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="shortcut icon" type="image/png" href="images/favicon.png">
       <link href='http://fonts.googleapis.com/css?family=Play' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/style.css">
       <script src="http://code.jquery.com/jquery.min.js"></script>
+      <script type="text/javascript" src="js/lawnchair.min.js"></script>
       <script type="text/javascript" src="js/banks.js"></script>
       <script type="text/javascript" src="js/app.js"></script>
   </head>
