--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/style.css">
       <script src="http://code.jquery.com/jquery.min.js"></script>
-      <script type="text/javascript" src="js/lawnchair.min.js"></script>
+      <!-- <script type="text/javascript" src="js/lawnchair.min.js"></script> -->
       <script type="text/javascript" src="js/banks.js"></script>
       <script type="text/javascript" src="js/app.js"></script>
   </head>
