--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
-<html lang="en" manifest="local.appcache">
+<html lang="en" >
+<!-- manifest="local.appcache" -->
 
   <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Two Times</title>
-      <meta name="description" content="">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="shortcut icon" type="image/png" href="images/favicon.png">
-      <link href='http://fonts.googleapis.com/css?family=Play' rel='stylesheet' type='text/css'>
-      <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet' type='text/css'>
-      <link rel="stylesheet" href="css/normalize.css">
-      <!-- <link rel="stylesheet" href="css/loader.css"> -->
-      <link rel="stylesheet" href="css/style.css">
-      <script src="http://code.jquery.com/jquery.min.js"></script>
-      <script type="text/javascript" src="js/banks.js"></script>
-      <script type="text/javascript" src="js/app.js"></script>
-      <script type="text/javascript" src="js/presentation.js"></script>
-      <!-- <script src="http://heartcode-canvasloader.googlecode.com/files/heartcode-canvasloader-min-0.9.1.js"></script> -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Two Times</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
+    <link href='http://fonts.googleapis.com/css?family=Play' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="http://code.jquery.com/jquery.min.js"></script>
+    <script type="text/javascript" src="js/banks.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
   </head>
   <body>
     <div id='container'>
@@ -40,10 +38,19 @@
             <button class='bank' id='hidden' data-id='6'></button>
           </div>
           <div id='track'>
+
+
             <button id='record'><img src="images/record.png"></button>
             <button id='play'><img src="images/play.png"></button>
             <button id='stop'><img src="images/stop.png"></button>
-            <button id='undo'><img src="images/undo.png"></button>
+            <!-- <button id='undo'><img src="images/undo.png"></button> -->
+             <!-- <form action=""> -->
+             <div class="form">
+              <input id="bpm" type="text" name="bpm" value="120"><br>
+              <!-- <button class="metal linear" value="BPM"></button> -->
+              <input type="submit" value="BPM" id="submit-button">
+            <!-- </form> -->
+            </div>
           </div>
         </div>
       </div>
@@ -72,6 +79,7 @@
       </div>
     </div>
 
+  <script type="text/javascript" src="js/presentation.js"></script>
   <script type="text/javascript">
 
     // TODO: Hide the loader
