--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
-<!-- manifest="local.appcache" -->
-
+<html lang="en" manifest="local.appcache">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -38,23 +36,16 @@
             <button class='bank' id='hidden' data-id='6'></button>
           </div>
           <div id='track'>
-
-
             <button id='record'><img src="images/record.png"></button>
             <button id='play'><img src="images/play.png"></button>
             <button id='stop'><img src="images/stop.png"></button>
-            <!-- <button id='undo'><img src="images/undo.png"></button> -->
-             <!-- <form action=""> -->
              <div class="form">
               <input id="bpm" type="text" name="bpm" value="120"><br>
-              <!-- <button class="metal linear" value="BPM"></button> -->
               <input type="submit" value="BPM" id="submit-button">
-            <!-- </form> -->
             </div>
           </div>
         </div>
       </div>
-
       <div id='pads'>
         <button class='pad' data-id='55'>7</button>
         <button class='pad' data-id='56'>8</button>
@@ -78,26 +69,7 @@
         <a href="http://www.twitter.com/yungwelchsgrape" target="_blank">@yungwelchsgrape</a>
       </div>
     </div>
-
   <script type="text/javascript" src="js/presentation.js"></script>
-  <script type="text/javascript">
-
-    // TODO: Hide the loader
-    // TODO: Hide the overlay
-    JS404.bindPresentation();
-
-    // var cl = new CanvasLoader('canvasloader-container');
-    // cl.setDiameter(200); // default is 40
-    // cl.setDensity(29); // default is 40
-    // cl.setRange(1.4); // default is 1.3
-    // cl.show(); // Hidden by default
-
-    // var loaderObj = document.getElementById("canvasLoader");
-    // loaderObj.style.position = "absolute";
-    // loaderObj.style["top"] = cl.getDiameter() * -0.5 + "px";
-    // loaderObj.style["left"] = cl.getDiameter() * -0.5 + "px";
-
-  </script>
-
+  <script type="text/javascript">JS404.bindPresentation();</script>
   </body>
 </html>
