removed bpm counter

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
             <button id='record'><img src="images/record.png"></button>
             <button id='play'><img src="images/play.png"></button>
             <button id='stop'><img src="images/stop.png"></button>
-             <div class="form">
+ <!--             <div class="form">
               <input id="bpm" type="text" name="bpm" value="120"><br>
               <input type="submit" value="BPM" id="submit-button">
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
