--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h2>About</h2>
 
               <p>A senior level project done while studying web development at <a href="http://www.makersquare.com" target="_blank" class="mks">MakerSquare</a> in Austin, TX.</p>
-              <p>Click or press a number 1-5 to choose a sound bank.  Each pad has a corresponding key assigned to it.  Tap out a beat and enjoy.  You can record and listen back to your beat.  This is a work in progess.</p>
+              <p>Click or press a number 1-5 to choose a sound bank.  Each pad has a corresponding key assigned to it.  Tap out a beat and enjoy.  To record click the reocrd button and play your beat.  When finished hit stop and then play to play back what you recorded.  This is a work in progess.</p>
           </div>
       </div>
 
