--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                 <h2>About</h2>
 
               <p>A senior level project done while studying web development at <a href="http://www.makersquare.com" target="_blank" class="mks">MakerSquare</a> in Austin, TX.</p>
-              <p>Click or press a number 1-5 to choose a sound bank.  Each pad has a corresponding key assigned to it.  Tap out a beat and enjoy.  To record click the reocrd button and play your beat.  When finished hit stop and then play to play back what you recorded.  This is a work in progess.</p>
+              <p>Click or press a number 1-5 to choose a sound bank.  Each pad has a corresponding key assigned to it.  Tap out a beat and enjoy.  To record click the reocrd button and play your beat.  When finished hit stop and then play to play back what you recorded.  Check out my other work or reach out to me at: <br>
+              <a href="http://bobbysmith.codes" target="_blank">bobbysmith.codes</a></p>
           </div>
       </div>
 
@@ -78,8 +79,8 @@
         <button class='pad' data-id='188'>,</button>
       </div>
       <div class="about">
-        <a href="mailto:contact@bobbysmith.codes?Subject=Yo" target="_top">email</a>
-        <a href="http://www.twitter.com/yungwelchsgrape" target="_blank">@yungwelchsgrape</a>
+<!--         <a href="mailto:contact@bobbysmith.codes?Subject=Yo" target="_top">email</a>
+        <a href="http://www.twitter.com/yungwelchsgrape" target="_blank">@yungwelchsgrape</a> -->
       </div>
     </div>
   <script type="text/javascript" src="js/presentation.js"></script>
